--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "concurrently": "^8.2.2",
-    "mongoose": "^8.4.0"
+    "framer-motion": "^11.2.6",
+    "mongoose": "^8.4.0",
+    "react-icons": "^5.2.1"
   }
 }
