--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@emotion/styled": "^11.11.5",
     "concurrently": "^8.2.2",
     "framer-motion": "^11.2.6",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.4.0",
     "react-icons": "^5.2.1"
   }
