--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "shop-mate",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "20.x"
+  },
   "main": "server/server.js",
   "scripts": {
     "start": "node server --ignore client",
