--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@chakra-ui/editable": "^3.1.0",
     "@chakra-ui/icons": "^2.1.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
