--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "@apollo/client": "^3.10.4",
     "@chakra-ui/editable": "^3.1.0",
     "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
@@ -20,6 +23,7 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-useinterval": "^1.0.2",
     "vite": "^4.4.5"
