--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,12 @@
     "@apollo/client": "^3.10.4",
     "@chakra-ui/editable": "^3.1.0",
     "@chakra-ui/icons": "^2.1.1",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.4.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
+    "axios": "^1.7.2",
     "graphql": "^16.8.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
