--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "apollo-server-express": "^3.13.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "graphql": "^16.8.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^8.4.0",
-    "stripe": "^15.7.0"
+    "stripe": "^15.8.0"
   }
 }
